@@ -1,3 +1,6 @@
+2009-01-25 Carlo Baldassi <carlobaldassi@gmail.com>
+	* new : interactive interface
+
 2008-11-24 Carlo Baldassi <carlobaldassi@gmail.com>
 
 	* modified : split auto button in 2
